<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:background="@drawable/card_front"
          >


            <TextView
                android:id="@+id/label_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/text_card_number"
                android:textColor="#D5DEEA"
                android:textSize="@dimen/tsize_card_small"/>

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_card_number"
                android:textSize="@dimen/tsize_card_big"
                android:nextFocusDown="@+id/edit_month"
                android:inputType="phone"
                android:maxLength="16"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edit_month"
                android:layout_below="@+id/edit_card_number"
                android:layout_marginRight="5dp"
                android:layout_marginTop="13dp"
                android:layout_toLeftOf="@+id/edit_month"
                android:gravity="center_vertical"
                android:text="@string/text_expiry_date"
                android:textColor="#D5DEEA"
                android:textSize="@dimen/tsize_card_small"/>

            <EditText
                android:id="@+id/edit_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_card_number"
                android:layout_marginRight="7dp"
                android:layout_marginTop="13dp"
                android:layout_toLeftOf="@+id/edit_year"
                android:nextFocusDown="@+id/edit_year"
                android:inputType="number"
                android:maxLength="2"/>

            <EditText
                android:id="@+id/edit_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edit_card_number"
                android:layout_marginTop="13dp"
                android:inputType="number"
                android:maxLength="2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingTop="15dp"
             android:paddingBottom="15dp"
            android:background="@drawable/card_front"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/img_magnet"
                android:layout_width="match_parent"
                android:background="@drawable/card_front"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/card_magnet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edit_ccv"
                android:layout_alignTop="@+id/edit_ccv"
                android:layout_below="@+id/img_magnet"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/edit_ccv"
                android:gravity="center"
                android:text="@string/CCV"
                android:textColor="#D5DEEA"
                android:textSize="@dimen/tsize_card_normal"/>

            <EditText
                android:id="@+id/edit_ccv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/img_magnet"
                android:layout_marginRight="15dp"
                android:layout_marginTop="13dp"
                android:inputType="number"
                android:maxLength="3"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_get_card_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GET CARD LIST"/>
    </LinearLayout>
</ScrollView>